<resources>
    <string name="app_name">MobiLAB</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="resolution">  Resolution:   </string>
    <string name="small">640x480</string>
    <string name="medium">800x600</string>
    <string name="large">1024x768</string>
    <string name="interval">          Interval:   </string>
    <string name="_10sec">10 sec</string>
    <string name="_30sec">30 sec</string>
    <string name="_60sec">60 sec</string>
    <string name="_120sec">120 sec</string>
    <string name="telNo">Telephone Number</string>
    <string name="interval2">Interval:</string>
    <string name="duration">  Duration:   </string>
    <string name="camera_properties">Camera Properties</string>
    <string name="sms_properties">SMS Properties</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="CAMERA">camera</string>
    <string name="resolution2">resolution</string>
    <string name="interval_changed_10"> interval changed to 10 sec</string>
    <string name="interval_changed_30"> interval changed to 30 sec</string>
    <string name="interval_changed_60"> interval changed to 60 sec</string>
    <string name="resolution_changed_640">Camera resolution changed to 640x480</string>
    <string name="resolution_changed_800">Camera resolution changed to 800x600</string>
    <string name="resolution_changed_1024">Camera resolution changed to 1024x768</string>
    <string name="default_tel_number">0000000000</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="enter_phone_number_description">Please write a phone destination number for sending SMS</string>
    <string name="enter_phone_number_error">Please write a valid phone number !
for example: 0556699919 </string>
    <string name="sound_properties">Sound Properties</string>
    <string name="duration_changed_30"> duration changed to 30 sec</string>
    <string name="duration_changed_60"> duration changed to 60 sec</string>
    <string name="duration_changed_120"> duration changed to 120 sec</string>
</resources>
