<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration" />

        <RadioGroup
            android:id="@+id/durationGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/sDuration30sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30sec" />

            <RadioButton
                android:id="@+id/sDuration60sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_60sec" />

            <RadioButton
                android:id="@+id/sDuration120sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_120sec" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interval" />

        <RadioGroup
            android:id="@+id/soundIntervalGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/iDuration30sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30sec" />

            <RadioButton
                android:id="@+id/iDuration60sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_60sec" />

            <RadioButton
                android:id="@+id/iDuration120sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_120sec" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/soundApprove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Approve" />


</LinearLayout>